--- a/Frontend/Style/style.css
+++ b/Frontend/Style/style.css
@@ -1,27 +1,27 @@
 body {
-	background-image: url('/background.jpg');
+	background-image: url('/home.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
-	height: 95vh;
+	height: 100vh;
 	margin: 0;
 	padding: 0;
 }
 
 .login-container {
-	margin-left: 950px;
-	margin-top: 300px;
+	margin-left: 900px;
+	margin-top: 190px;
 	/* height: 100px; */
 	/* border: 1px solid black; */
-	width: 350px;
-	height: 250px;
+	width: 450px;
+	height: 300px;
 }
 
 input {
 	background-color: rgb(102, 179, 209);
 	margin-top: 15px;
-	width: 340px;
-	height: 25px;
+	width: 450px;
+	height: 38px;
 	border-radius: 80px;
 	padding-left: 20px;
 	border: 1px solid rgb(100, 179, 211);
@@ -36,8 +36,8 @@ input {
 select {
 	background-color: rgb(102, 179, 209);
 	margin-top: 15px;
-	width: 360px;
-	height: 30px;
+	width: 473px;
+	height: 41px;
 	border-radius: 80px;
 	padding-left: 20px;
 	border: 1px solid rgb(102, 179, 209);
@@ -49,15 +49,15 @@ select {
 }
 
 button {
-	border: 1px solid rgb(102, 179, 209);
+	border: 1px solid rgb(83, 153, 181);
 	font-weight: bold;
 	color: white;
-	background-color: rgb(44, 140, 179);
-	width: 100px;
-	height: 30px;
+	background-color: rgb(83, 153, 181);
+	width: 150px;
+	height: 40px;
 	border-radius: 80px;
 	margin-top: 35px;
-	margin-left: 135px;
+	margin-left: 170px;
 }
 button:hover {
 	background-color: #13629b;
@@ -72,14 +72,15 @@ h3 {
 
 nav {
 	display: flex;
-	background-color: rgb(21, 68, 86);
+	background-color: rgb(39, 126, 161);
 	color: #fff;
 	padding: 10px;
-	height: 38px;
+	height: 40px;
 	align-items: center;
 	justify-content: space-between;
 	padding-left: 30px;
-	padding-right: 50px;
+	padding-right: 40px;
+	margin-right: 30px;
 }
 
 nav ul {
@@ -87,11 +88,12 @@ nav ul {
 	margin: 0;
 	padding: 0;
 	display: flex;
-	justify-content: space-between;
+	/* justify-content: space-between; */
 	align-items: center;
 }
 
 nav ul li {
+	font-size: 18px;
 	margin: 0 10px;
 }
 
@@ -114,7 +116,14 @@ nav ul li a:hover {
 
 #newPage {
 	margin-top: 30px;
-	margin-left: 1070px;
+	margin-left: 1080px;
 	text-decoration: none;
 	color: rgb(14, 88, 88);
 }
+
+#name {
+	/* border: 1px solid black; */
+	font-size: 30px;
+}
+
+/* =======================================================================================================================*/
