--- a/Frontend/Style/style.css
+++ b/Frontend/Style/style.css
@@ -1,11 +1,13 @@
 body {
-	background-image: url('/home.jpg');
+	background-image: url('/Frontend/Image/home.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
 	height: 100vh;
 	margin: 0;
 	padding: 0;
+	font-size: 18px;
+	font-family: 'Karla', sans-serif;
 }
 
 .login-container {
@@ -26,6 +28,7 @@ input {
 	padding-left: 20px;
 	border: 1px solid rgb(100, 179, 211);
 	color: black;
+	font-size: 18px;
 }
 ::placeholder {
 	font-weight: bold;
@@ -41,7 +44,8 @@ select {
 	border-radius: 80px;
 	padding-left: 20px;
 	border: 1px solid rgb(102, 179, 209);
-	color: black;
+	color: rgb(255, 255, 255);
+	font-size: 18px;
 }
 #op1 {
 	font-weight: bold;
@@ -53,11 +57,11 @@ button {
 	font-weight: bold;
 	color: white;
 	background-color: rgb(83, 153, 181);
-	width: 150px;
-	height: 40px;
+	width: 473px;
+	height: 41px;
 	border-radius: 80px;
 	margin-top: 35px;
-	margin-left: 170px;
+	font-size: 19px;
 }
 button:hover {
 	background-color: #13629b;
@@ -80,7 +84,7 @@ nav {
 	justify-content: space-between;
 	padding-left: 30px;
 	padding-right: 40px;
-	margin-right: 30px;
+	/* margin-right: 30px; */
 }
 
 nav ul {
@@ -110,15 +114,15 @@ nav ul li a:hover {
 
 #logo {
 	margin-top: 5px;
-	width: 140px;
-	height: 140px;
+	width: 70px;
+	height: 70px;
 }
 
-#newPage {
-	margin-top: 30px;
-	margin-left: 1080px;
+.newPage {
+	margin-top: 10px;
+	/* margin-left: 1040px; */
 	text-decoration: none;
-	color: rgb(14, 88, 88);
+	color: rgb(31, 110, 141);
 }
 
 #name {
@@ -126,4 +130,13 @@ nav ul li a:hover {
 	font-size: 30px;
 }
 
-/* =======================================================================================================================*/
+#btn {
+	/* border: 1px solid rgb(0, 0, 0); */
+	width: 468px;
+	align-items: center;
+	display: flex;
+	justify-items: center;
+	justify-content: space-around;
+	margin-left: 900px;
+	cursor: pointer;
+}
